<resources>
    <string name="app_name">Nimble</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="log_in">Log in</string>
    <string name="create_new_nimble_account">Create new nimble account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="error_valid_name">Please enter valid name.</string>
    <string name="error_valid_email">Please enter valid email address.</string>
    <string name="error_valid_login_password">Please enter valid password.</string>
    <string name="error_valid_password">Password length should be minimum 6. Please enter valid password.</string>
    <string name="error_valid_password_retype">Passwords do not match. Please re-type the passwords.</string>
    <string name="error_unable_to_connect">Unable to connect to the internet.</string>
    <string name="error_server_not_found">We couldn\'t find the server.</string>
    <string name="error_unknown_error">Unknown error.</string>
    <string name="enter_your_email_to_receive_instructions_for_resetting_your_password">Enter your email to receive instructions for resetting your password.</string>
    <string name="title_activity_slider">SliderActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="nav_header_title">Mai</string>
    <string name="start_survey">Start Survey</string>
    <string name="today">Today</string>
    <string name="retry">Retry</string>
    <string name="question_alert_message">Question section is in progress.</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="profileimage">profileImage</string>
    <string name="fabbutton">fabButton</string>
    <string name="success">Success</string>
</resources>