<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:transitionName="fade"
        app:layout_constraintBottom_toTopOf="@+id/layout_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_email"
            android:hint="@string/email"
            android:layout_margin="@dimen/margin_medium"
            style="@style/EditTextEmail" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_default"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_text_password"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:background="@null"
                style="@style/EditText" />

            <TextView
                android:id="@+id/btnReset"
                android:layout_height="match_parent"
                android:text="@string/forgot"
                android:paddingEnd="@dimen/margin_low"
                style="@style/TextViewPara" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btn_log_in"
            android:text="@string/log_in"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            style="@style/Button" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_height="match_parent"
            android:text="@string/create_new_nimble_account"
            android:layout_gravity="center"
            style="@style/TextViewPara" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>